syntax = "proto3";

option go_package = "./";

package api;

service AuthService{
    rpc SignUp(SignUpRequest) returns (User){}
    rpc SignIn(SignInRequest) returns (SignInResponce){}
    rpc Update(UpdRequest) returns (User){}
    rpc Delete(DelRequest) returns (Response){}
    rpc ParseToken(ParseRequest) returns (User){}
}


message SignUpRequest{
    string username = 1;
    string password = 2;
}

message SignInRequest{
    string username = 1;
    string password = 2;
}

message SignInResponce{
    string token = 1;
}

message UpdRequest{
    User filtr = 1;
    User upd = 2;
    string token = 3;
    bool sign_up = 4;
}

message DelRequest{
    User user = 1;
    string token = 2;
}

message ParseRequest{
    string token = 1;
}

message User{
    string id = 1;
    int64 mysql_id = 2;         
	string username = 3;
	string password = 4;
}

message Response {
    string response = 1;
}
